jomini_derive/tests/compile-fail/enum_type.stderr
error: Expected struct
 --> tests/compile-fail/enum_type.rs:5:10
  |
5 | pub enum Model {
  |          ^^^^^
